test/scc/decl/semantic-errors/002.t
extern void foo();
extern int foo();